# meet_team

./: LICENSE  README.md  docker-compose.yaml  pyproject.toml
FE/: register.css  register.html
db/: init.sql
src/meet_team_api/: db.py  main.py
src/meet_team_api/api/handlers/: commit.py  course.py  group.py  handler_message.py  review.py  task.py  user.py
src/meet_team_api/api/routes/: __init__.py  commit.py  course.py  group.py  message.py  review.py  routes_message.py  task.py  user.py
src/meet_team_api/api/utils/: get_userid.py  user_in_group.py
src/meet_team_api/models/: commit.py  course.py  group.py  models_message.py  review.py  task.py  user.py
